--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=web-prak-2025
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=bank
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+
 server.error.whitelabel.enabled=false
-spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=true
 spring.jpa.properties.hibernate.default_schema=bank
 
