--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 server.error.whitelabel.enabled=false
 spring.flyway.enabled=true
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.default_schema=bank
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
