--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.h2database:h2'
     implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
-    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
 
+    testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testng:testng:7.7.1'
     testImplementation 'org.mockito:mockito-core'
@@ -59,5 +59,5 @@ dependencies {
 }
 
 test {
-    useTestNG()
+    useJUnitPlatform()
 }
